<resources>

    <string name="app_name">xueyuan</string>
    <string name="login_label_username">账号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_label_register">注册</string>
    <string name="login_username_hint">请输入您的账号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="register_username">账号</string>
    <string name="register_password">密码</string>
    <string name="register_password2">确认密码</string>
    <string name="confirm">您两次输入的密码不一样，请再次输入</string>
    <string name="register">立即注册</string>
    <string name="update">一键更新</string>
</resources>
