<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
  	    android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:padding="15dip"        
	  	android:layout_margin="15dip" 
	  	android:background="@drawable/screen" >
  		<!-- 账号 -->
	  	<TextView 
	  	    android:id="@+id/login_user_input"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_alignParentTop="true"
	  		android:layout_marginTop="5dp"
	  		android:text="@string/login_label_username"
	  		/>
	  	<EditText 
	  	    android:id="@+id/username_edit"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:hint="@string/login_username_hint"
	  		android:textColor="#000000"
	  		android:layout_below="@id/login_user_input"
	  		android:singleLine="true"
	  		android:inputType="text"/>
	    <!-- 密码 text -->
	    <TextView 
	        android:id="@+id/login_password_input"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/username_edit"
	    	android:layout_marginTop="3dp"
	    	android:text="@string/login_label_password"
	    	/>
	    <EditText 
	        android:id="@+id/password_edit"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/login_password_hint"
	    	android:textColor="#000000"
	    	android:layout_below="@id/login_password_input"
	    	android:password="true"
	    	android:singleLine="true"
	    	android:inputType="textPassword" />
	    
	    <Button 
	        android:id="@+id/login_button"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@id/password_edit"
	    	android:layout_alignRight="@id/password_edit"
	    	android:text="@string/login_label_signin" />

	    <Button
	        android:id="@+id/register_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/login_button"
	        android:layout_alignBottom="@+id/login_button"
	        android:layout_toLeftOf="@+id/login_button"
	        android:text="@string/login_label_register" />

  	</RelativeLayout>
    

</LinearLayout>
